fixed overflow of messages

--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -88,6 +88,8 @@ padding-left:10px;
 .messages{
     overflow: auto; 
     margin-top:-10px;
+
+    height: 100vh;
 }
 .messages > div > div{
     border-bottom:0.5px solid #eeeeee;
